--- a/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
+++ b/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
@@ -79,9 +79,6 @@
     /* Hover version */
     .drop-down-container--hover & {@include to-rem(margin-top, -4);}
 
-    /* Non JS Users */
-    .no-js .drop-down-menu & {width: auto;}
-
     /* Shared rules */
     .drop-down-menu__hdr,
     .drop-down-menu__hdr-sub {font-weight: normal;}
@@ -92,11 +89,7 @@
       text-align: center;
       color: $color-txt-light;
 
-      /* Non JS users */
-      .no-js & {border-top: 1px solid $color-grey-med-3;}
-
       /* Header text */
-      h2,
       h3 {
         display: inline;
         @include font-size($font-size-sml);
@@ -104,7 +97,6 @@
 
       /* Back button */
       .btn {
-        color: $color-grey-dark-2;
         position: absolute;
         top: 50%;
         left: 0;
@@ -162,15 +154,13 @@
       /* IE 10 */
       @include ie-10-up {top: -8px;}
 
-      /* Hide for IE 9/8 and non JS users */
-
       /*
+        Hide for IE 9/8
+
         Note: it is okay to use `!important` here as we're doing it pre-emptively i.e. you know you will always want the rule it's applied too to take precedence.
       */
-
       .ie-9 &,
-      .old-ie &,
-      .no-js & {display: none !important;}
+      .old-ie & {display: none !important;}
     }
 
     /* List */
