--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -354,13 +354,13 @@
     </div>
     <ul class="horiz-list">
       <li ng-repeat="filter in search.appliedFilters">
-        <button type="button" ng-click="removeSelectedFilter(filter)" class="tags__btn btn">
+        <button type="button" ng-click="removeSelectedFilter(filter)" class="btn">
           <span class="txt-truncate">{{ filter.title }}</span>
           <span class="icon icon--close-sml icon--lrg icon--flush-top" aria-hidden="true"></span>
         </button>
       </li>
       <li>
-        <a href="<%= pb_path %>" ng-click="removeAllFilters()" class="tags__btn tags__btn--clear btn btn--faux-link">Clear all</a>
+        <a href="<%= pb_path %>" ng-click="removeAllFilters()" class="btn btn--faux-link">Clear all</a>
       </li>
     </ul>
   </div>
