add interactive functionality to dialog via angular directive

--- a/app/views/products/_national_view_dialog.html.erb
+++ b/app/views/products/_national_view_dialog.html.erb
@@ -1,5 +1,5 @@
 <%# Dialog to push users to choose a centre when in national view %>
-<div class="dialog dialog--alert dialog--national-centre-selector box island js-disabled-hide js-dialog js-dialog-alert" aria-describedby="dialog-desc" aria-hidden="false" role="alertdialog">
+<div dialog class="dialog dialog--alert dialog--national-centre-selector box island js-disabled-hide js-dialog js-dialog-alert" aria-describedby="dialog-desc" aria-hidden="false" role="alertdialog">
 
   <%# Logo and heading %>
   <div class="dialog__logo dialog__mrg-base">
