Updating comments for hide silent placeholder

--- a/app/assets/stylesheets/partials/utils/placeholders/_hide.scss
+++ b/app/assets/stylesheets/partials/utils/placeholders/_hide.scss
@@ -3,9 +3,7 @@
    ====================================================================================== */
 
 /*
-	Usage: hides elements in various ways.
-
-	Note: Most of the time the relevant 'Hide' helper classes (see: helpers/hide) will handle this.
+	Hides elements in various ways.
 */
 
 /* Hide only visually but have it available for screen readers */
