do not show dialog on subsequent visits to /products if the user closed the dialog, code cleanups

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -138,13 +138,13 @@
 @import "partials/modules/promo-tile";
 @import "partials/modules/no-content-fallback-msg";
 @import "partials/modules/img-rotate";
-@import "partials/modules/dialog";
 //@import "partials/modules/sprite";
 
   /* Modules -> Widgets */
   @import "partials/modules/widgets/flexslider";
   @import "partials/modules/widgets/map-micello";
   @import "partials/modules/widgets/tabs";
+  @import "partials/modules/widgets/dialog";
   //@import "partials/modules/widgets/accordion";
   //@import "partials/modules/widgets/adaptive-google-map";
   //@import "partials/modules/widgets/social-media-share";
