When viewing store detail, store name should not be clickable in the title - WSF-6151

--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -230,7 +230,18 @@
           }
         }
 
-          > span {color: $color-txt-light;}
+          > a {
+            color: $color-txt-light;
+
+            &:hover,
+            &:focus {color: $color-link-hover;}
+
+            /* Forward slash to seperate the link and the store name */
+            &:after {
+              content: " /";
+              color: $color-txt-dark;
+            }
+          }
       }
 
           /* Reapply global link hover to first child `span` */
