--- a/app/assets/stylesheets/partials/forms/_base.scss
+++ b/app/assets/stylesheets/partials/forms/_base.scss
@@ -84,7 +84,13 @@ textarea[disabled],
 	cursor: not-allowed !important;
 	text-shadow: none !important;
 	box-shadow: none !important;
-	@include opacity(0.7, !important);
+	@include opacity(0.5, !important);
+}
+
+/* Modifier: prevent hover/focus states being applied */
+.is-disabled--no-hover {
+  color: inherit !important;
+  background: inherit !important;
 }
 
 /* Required field indicator (asterisk) */
