--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
 				<div class="header-centre-select container">
 					<h1 class="header-centre-select__centre-name"><%= @centre.short_name %></h1>
 					<button type="button" class="header-centre-select__centre-name btn h1" toggle-visibility="nav-social-tertiary-container" aria-owns="nav-social-tertiary-container"><%= @centre.short_name %><span class="hide-visually"> (show menu)</span> <span class="icon icon--arrow-down-full" aria-hidden="true"></span></button>
-					<a href="/" target="_self" class="header-centre-select__link" rel="home">Change<span class="hide-visually"> centre</span><span class="icon icon--arrow-right icon--xlrg icon--flush-top" aria-hidden="true"></span></a>
+					<a href="/" target="_self" class="header-centre-select__link" rel="home">Change<span class="hide-visually--palm"> centre</span><span class="icon icon--arrow-right icon--xlrg icon--flush-top" aria-hidden="true"></span></a>
 				</div>
 				<%# //Centre selector %>
 
