adds pins to store filtered by a category

--- a/app/assets/javascripts/map/micello/map_theme.js.coffee.erb
+++ b/app/assets/javascripts/map/micello/map_theme.js.coffee.erb
@@ -34,6 +34,11 @@ map.micello = customTheme:
         'Taxi': '<%= image_path "micello-map-icons/png/taxi.png" %>'
         'Telephone': '<%= image_path "micello-map-icons/png/telephones.png" %>'
 
+  pin:
+    src: '<%= image_path 'icon_map_pointer.png' %>'
+    ox: 9
+    oy: 30
+
   themeFamily: 'Standard'
 
   theme: s:
