--- a/app/assets/javascripts/map/deferred_map.js.coffee.erb
+++ b/app/assets/javascripts/map/deferred_map.js.coffee.erb
@@ -40,6 +40,7 @@ proxiedFunctions = [
   'reset'
   'toggleKeyEvents'
   'lock'
+  'pinStores'
 ]
 
 do (proto = map.Micello.prototype, toProxy = proxiedFunctions) ->
