--- a/app/views/stores/_store.html.erb
+++ b/app/views/stores/_store.html.erb
@@ -7,6 +7,8 @@
       <%# Phone no %>
       <span class="hide-fully--palm"><span class="hide-visually">Call store: </span><%= phone_format store.phone_number %></span>
       <%# //Phone no %>
+      <%# [BACKEND] inject this `span` when a filter has been applied and remove when filter(s) are cleared %>
+      <span class="icon icon--pin icon--flush-top"></span>
     </div>
     <%# //Store name %>
 
