--- a/app/views/products/_national_view_dialog.html.erb
+++ b/app/views/products/_national_view_dialog.html.erb
@@ -21,14 +21,14 @@
     <%# Centre selector target %>
     <div class="drop-down-menu__target drop-down pointer-up box box--drop-down" id="national-dialog-centre-selector">
       <dl class="drop-down-menu__list">
-      <% %w(NSW ACT QLD VIC SA WA).each do |state| %>
-        <dt class="drop-down-menu__hdr-sub drop-down-menu__divider"><%= state %></dt>
-        <% @centres[state].each do |centre| %>
-          <dd class="drop-down-menu__divider">
-            <%= link_to centre.short_name, context_aware_link(centre), class: 'btn btn--full btn--full-left' %>
-          </dd>
-        <% end %>
-      <% end %>
+      	<% %w(NSW ACT QLD VIC SA WA).each do |state| %>
+      	  <dt class="drop-down-menu__hdr-sub drop-down-menu__divider"><%= state %></dt>
+      	  <% @centres[state].each do |centre| %>
+      	    <dd class="drop-down-menu__divider">
+      	      <%= link_to centre.short_name, national_to_centre(centre.code), class: 'btn btn--full btn--full-left' %>
+      	    </dd>
+      	  <% end %>
+      	<% end %>
       </dl>
     </div>
     <%# //Centre selector target %>
